[gd_scene load_steps=5 format=3 uid="uid://cgjdjhiwftt6h"]

[ext_resource type="Script" path="res://assets/ui/components/Joystick.gd" id="1_obsna"]
[ext_resource type="Texture2D" uid="uid://be417tvjvx7jn" path="res://sprites/ui/circle.png" id="2_7dnag"]
[ext_resource type="Texture2D" uid="uid://c1ud10w5msko3" path="res://sprites/ui/knob.png" id="3_pghf3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lqb1a"]
radius = 32.0

[node name="Joystick" type="Area2D"]
script = ExtResource("1_obsna")

[node name="BigCircle" type="Sprite2D" parent="."]
texture = ExtResource("2_7dnag")

[node name="Knob" type="Sprite2D" parent="BigCircle"]
texture = ExtResource("3_pghf3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lqb1a")

[node name="move_left" type="ColorRect" parent="."]
offset_left = 37.0
offset_top = -21.0
offset_right = 41.0
offset_bottom = 19.0

[node name="move_right" type="ColorRect" parent="."]
offset_left = -42.0
offset_top = -22.0
offset_right = -38.0
offset_bottom = 18.0

[node name="move_forward" type="ColorRect" parent="."]
offset_left = -21.0
offset_top = -40.0
offset_right = 22.0
offset_bottom = -35.0

[node name="move_backward" type="ColorRect" parent="."]
offset_left = -22.0
offset_top = 36.0
offset_right = 21.0
offset_bottom = 41.0
